--- a/samples/browser/index.html
+++ b/samples/browser/index.html
@@ -23,6 +23,19 @@
 				console.log(res);
 			});
 
+		// Example of downloading the user's profile photo and displaying it in an img tag
+		client
+			.api('/me/photo/$value')
+			.responseType('blob')
+			.get((err, res, rawResponse) => {
+				if (err) throw err;
+
+				debugger;
+				var url = window.URL;
+				var blobUrl = url.createObjectURL(rawResponse.xhr.response)
+				document.getElementById("profileImg").setAttribute("src", blobUrl);
+			})
+
 		function updateProfilePicture() {
 			var file = document.querySelector('input[type=file]').files[0];
 			var reader = new FileReader();
@@ -48,10 +61,10 @@
 <body>
 
 <p>
-	By loading this page, we called /me endpoint on the Microsoft Graph.  Open your browser JavaScript console to see the result!
+By loading this page, we called /me endpoint on the Microsoft Graph.  Open your browser JavaScript console to see the result!
 </p>
 <br>
-
+<img id="profileImg" />
 <p>
 Also, you can update your profile picture:
 <input type="file" onchange="updateProfilePicture()"><br>
