Fixes Bug: https://github.com/microsoftgraph/msgraph-sdk-javascript/issues/153

--- a/samples/browser/src/index.html
+++ b/samples/browser/src/index.html
@@ -12,18 +12,18 @@
 	</head>
 
 	<body style="background: #f3f3f3;">
-		<div class="fileUploadParent">
+		<!-- <div class="fileUploadParent">
 			<img id="profileImg" width="100px" src="" alt="profileImg" />
 			<input id="uploadProfile" type="file" class="fileUpload" onchange="request.updateProfilePicture()" />
 			<div class="imageInput">
 				<img width="20px" src="./upload-user.svg" />
 			</div>
-		</div>
+		</div> -->
 		<div display="inline-block">
 			<h2>
 				<span>Hello </span>
-				<span id="displayName" style="display: inline-block; vertical-align: middle;"></span>
-				<span> !</span>
+				<!-- <span id="displayName" style="display: inline-block; vertical-align: middle;"></span> -->
+				<span>!</span>
 			</h2>
 		</div>
 		<div class="main">
