Changes: * Removed polyfill dependencies for fetch and promise * Removed Browserify and replaced it with rollup

--- a/samples/browser/src/index.html
+++ b/samples/browser/src/index.html
@@ -4,7 +4,7 @@
 		<title>Sample For Browser</title>
 		<script type="text/javascript" src="./secrets.js"></script>
 		<script src="https://secure.aadcdn.microsoftonline-p.com/lib/0.2.4/js/msal.js"></script>
-		<script type="text/javascript" src="./graph-js-sdk-web.js"></script>
+		<script type="text/javascript" src="./graph-js-sdk.js"></script>
 		<script type="text/javascript" src="./request.js"></script>
 		<script type="text/javascript" src="./ui.js"></script>
 		<script type="text/javascript" src="./main.js"></script>
